# progweb_back

./: .env.example  Dockerfile  README.md  check_database.py  database.py  generate_hash.py  main.py  pyproject.toml  security.py  seed_db.py
auth/: auth_controller.py  auth_service.py
roles/: role_controller.py  role_model.py  role_repository.py  role_service.py
user/: user_controller.py  user_model.py  user_repository.py  user_service.py
vakinha/: vakinha_controller.py  vakinha_model.py  vakinha_repository.py  vakinha_service.py
